fetch real traffic data from cologne and make visualization of speed via big canvas

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,6 +26,8 @@
         <script type="text/javascript" src="js/jquery.autocomplete.min.js"></script>
         -->
         <script type="text/javascript" src="js/jquery.autocomplete.js"></script>
+
+        <script type="text/javascript" src="js/leaflet_canvas_layer.js"></script>
         <script type="text/javascript" src="js/ghrequest.js?v=0.4.4"></script>
         <script type="text/javascript" src="js/main.js?v=0.4.4"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css" />
